Sam | Blocking all bp more or less

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ThatGameJam
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/TGJ/Main/LVL/LVL_Main.LVL_Main
+GameDefaultMap=/Game/TGJ/Main/LVL/LVL_Main.LVL_Main
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
